style.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;  
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    align-items: stretch;
    flex: 1 1 100%;
}

.header {
    display: flex;
    flex-direction: column;
    padding: 20px 200px 70px 200px;  
    flex-wrap: wrap;
    flex: 1 1 100%;   
}

.logo {
    font-size: 24px;
    color: rgb(221, 222, 224);
    font-weight: 600;
}

.image-text {
    color: #f9faf8;
    font-size: 18px;
    padding: 110px 130px;
    background-color: rgb(110, 116, 124);
    
}

a, .hero-sub-text {
    text-decoration: none;
    color: #e5e7eb;
    filter: contrast(50%);
    font-size: 18px;
    margin: 0; 
}

a:visited {
    color: #e5e7eb;
    text-decoration: none;
}

.links {
    display: flex;
    gap: 25px;
    
}

h1 {
    font-size: 48px;
    font-weight: 900px;
    color: #f9faf8;
    margin: 0;
}

button {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    padding: 8px 35px;
    background-color: #3882f6;
    border: 0px;
    color: #f9faf8;
    font-size: 18px;
    border-radius: 10px;
    font-weight: 600;
    margin: 15px 0px;
    align-self: flex-start
}

.header-top {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.header-body {
    display: flex;
    margin: 100px 0px 50px;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: flex-start;
}

.header-text {
    display: flex;
    flex-direction: column;
    flex: 1 1 100px;
    margin-right: 60px; 
}







.information {
    display: flex;
    flex-direction: column;
    padding: 10px 150px 120px;  
}
h2 {
    text-align: center;
    font-size: 36px;
    margin-bottom: 50px;
    font-weight: 700;

}
.info-box, .info-text {
    display: flex;
    justify-content: center;
    gap: 50px;
   
}

.text {
    text-align: center;
    width: 160px;
    color: rgb(110, 116, 124);
    font-size: 18px;
    margin-top: 5px; 
    
}

.box {
    height: 150px;
    width: 150px;
    border: 4px solid #3882f6;
    border-radius: 15px;
    
}






.quote-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    margin: 0px; 
    background-color: #e5e7eb;
    padding: 130px 300px 106px;  
}
.quote {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: rgb(52, 59, 71);
    padding: 0px;
    margin: 0px;
    width: 780px;
    display: flex;
    flex-wrap: wrap;
}
.quote-att {
    align-self: flex-end;
    margin: 0px;
    padding: 0px 50px;
    font-size: 24px;
    font-weight: 600;
}






.call-box {
    display: flex;
    background-color: bisque;
    padding: 20px 40px;
    margin: 30px 50px;
    justify-content: space-between;
    align-items: center;

}
.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: blueviolet;
}

.header, .footer {
    background-color: #1F2937;
    
}

